--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "bootstrap": "^4.0.0",
     "compression": "^1.7.0",
     "express": "^4.15.3",
     "helmet": "^3.8.0",
     "morgan": "^1.8.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "reactstrap": "^5.0.0-alpha.4",
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
