--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "compression": "^1.7.0",
     "express": "^4.15.3",
     "helmet": "^3.8.0",
+    "mongodb-autoincrement": "^1.0.1",
+    "mongoose": "^5.0.1",
     "morgan": "^1.8.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
